processed/jira/txt/LU/LU-11861.txt
Key:        LU-11861
Summary:    master can't build with lock debug enabled
Link:       https://jira.whamcloud.com/browse/LU-11861
Type:       Bug
Priority:   Blocker
Status:     Resolved
Resolution: Fixed
Assignee:   Alexey Lyashkov
Reporter:   Alexey Lyashkov
Created:    Tue, 15 Jan 2019 12:22:28 +0000
Updated:    Tue, 20 Sep 2022 12:22:16 +0000
Resolved:   Wed, 6 Feb 2019 18:13:32 +0000

--- Environment ---
RHEL 7.4 debug kernel

--- Description ---
/Users/c17817/work/Lustre/work-wc/LU-11413/lustre/lustre/obdclass/llog_cat.c: In function ‘llog_cat_prep_log’:

/Users/c17817/work/Lustre/work-wc/LU-11413/lustre/lustre/obdclass/llog_cat.c:284:42: error: ‘LLOGH_CAT’ undeclared (first use in this function)

   down_read_nested(&cathandle->lgh_lock, LLOGH_CAT);

                                          ^

/Users/c17817/work/Lustre/work-wc/LU-11413/lustre/lustre/obdclass/llog_cat.c:284:42: note: each undeclared identifier is reported only once for each function it appears in

/Users/c17817/work/Lustre/work-wc/LU-11413/lustre/lustre/obdclass/llog_cat.c:285:47: error: ‘LLOGH_LOG’ undeclared (first use in this function)

   down_write_nested(&(*ploghandle)->lgh_lock, LLOGH_LOG);

--- Comment (gerrit, Tue, 20 Sep 2022 03:35:08 +0000) ---
"Oleg Drokin " merged in patch https://review.whamcloud.com/41897/

Subject: LU-11861 obdclass: fix build with debug kernel

Project: fs/lustre-release

Branch: b2_12

Current Patch Set: 

Commit: bcbee25b076161e993cea3e9762b896cdf289a9d

--- Comment (gerrit, Fri, 5 Mar 2021 14:53:56 +0000) ---
Etienne AUJAMES (eaujames@ddn.com) uploaded a new patch: https://review.whamcloud.com/41897

Subject: LU-11861 obdclass: fix build with debug kernel

Project: fs/lustre-release

Branch: b2_12

Current Patch Set: 1

Commit: 8d7623013291f105707001ffbea517028d88f1fc

--- Comment (pjones, Wed, 6 Feb 2019 18:13:32 +0000) ---
Landed for 2.13

--- Comment (gerrit, Wed, 6 Feb 2019 06:43:44 +0000) ---
Oleg Drokin (green@whamcloud.com) merged in patch https://review.whamcloud.com/34030/

Subject: LU-11861 obdclass: fix build with debug kernel

Project: fs/lustre-release

Branch: master

Current Patch Set: 

Commit: 2dc87bb143e998e25585673b5f0ba7e2f317475e

--- Comment (gerrit, Tue, 15 Jan 2019 12:26:33 +0000) ---
Alexey Lyashkov (c17817@cray.com) uploaded a new patch: https://review.whamcloud.com/34030

Subject: LU-11861 obdclass: fix build with debug kernel

Project: fs/lustre-release

Branch: master

Current Patch Set: 1

Commit: cc7dffcb792dd1b0e9df2ecab865921dd854eb1e
